--- a/index.html
+++ b/index.html
@@ -1,24 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="4;url=https://forms.gle/iANYMdAEP9byqEU77">
+        <title>Redirect Page</title>
     <title>BLUE</title>
     <style>
-        body {
-            background-color: blue;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-        }
+       body {
+    background-color: rgb(0, 0, 255);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh; /* Use viewport height to fill the screen */
+    margin: 0; /* Remove default body margin */
+    font-family: Arial, sans-serif; /* Optional: Set a more common font */
+}
 
-        h2 {
-            color: white;
-        }
+h2 {
+    color: white;
+    text-align: center; /* Center text in the h2 element */
+    margin-top: 20px; /* Add space above the h2 element */
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+    margin-bottom: 20px; /* Add space below the image */
+}
+
     </style>
+        
+    
 </head>
 <body>
+    <img src="eclub.png" alt="ECLUB" class="top" width="10%" >
+    <br>
     <h2 id="randomText"></h2>
+    <br>
     <script>
         // Array of random lines
         var randomLines = [
