--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@ img {
             "You Live in Fairy Land",
             "Incorrect",
             "Wrong QR! Try again!",
-            "This is not real"
+            "This is not real",
+            "You're on the wrong path",
+            "Choose wisely!",
+            "Are you sure about this?",
+            "Keep Dreaming... Dreamer",
+            "Don't follow the rat race"
+
         ];
 
         // Get a random index
