--- a/index.html
+++ b/index.html
@@ -7,40 +7,12 @@
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Montserrat:400,700'><link rel="stylesheet" href="./style.css">
 
 </head>
-<body>
-<!-- partial:index.partial.html -->
-<div class="clock-container">
-  <div class="clock-col">
-    <p class="clock-day clock-timer">
-    </p>
-    <p class="clock-label">
-      Day
-    </p>
-  </div>
-  <div class="clock-col">
-    <p class="clock-hours clock-timer">
-    </p>
-    <p class="clock-label">
-      Hours
-    </p>
-  </div>
-  <div class="clock-col">
-    <p class="clock-minutes clock-timer">
-    </p>
-    <p class="clock-label">
-      Minutes
-    </p>
-  </div>
-  <div class="clock-col">
-    <p class="clock-seconds clock-timer">
-    </p>
-    <p class="clock-label">
-      Seconds
-    </p>
-  </div>
-</div>
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.2/moment.min.js'></script><script  src="./script.js"></script>
+<body style="background-image: url(./rickroll-rick.gif)  ; background-size: cover; background-repeat: no-repeat;">
 
+  <script>
+    setTimeout(function() {
+  window.location.href = "https://forms.gle/TtPmEHewgfSJBXKV6"; // Replace "https://example.com" with your desired URL
+}, 5000);
+  </script>
 </body>
 </html>
